Aug22_errors.txt
make  all-recursive
make[1]: Entering directory `/home/jaimelyn/projects/ohm_mod_tile'
Making all in iniparser3.0b
make[2]: Entering directory `/home/jaimelyn/projects/ohm_mod_tile/iniparser3.0b'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/jaimelyn/projects/ohm_mod_tile/iniparser3.0b'
make[2]: Entering directory `/home/jaimelyn/projects/ohm_mod_tile'
g++ -DHAVE_CONFIG_H -I.  -I/usr/include/freetype2 -pthread -I/usr/include  -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12   -I/usr/include/cairomm-1.0 -I/usr/lib/x86_64-linux-gnu/cairomm-1.0/include -I/usr/include/cairo -I/usr/include/sigc++-2.0 -I/usr/lib/x86_64-linux-gnu/sigc++-2.0/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12     -g -O2 -MT gen_tile.o -MD -MP -MF .deps/gen_tile.Tpo -c -o gen_tile.o gen_tile.cpp
make[2]: Leaving directory `/home/jaimelyn/projects/ohm_mod_tile'
make[1]: Leaving directory `/home/jaimelyn/projects/ohm_mod_tile'

gen_tile.cpp: In function ‘void* render_thread(void*)’:
gen_tile.cpp:346:113: error: ‘struct protocol’ has no member named ‘t’
                             struct stat_info sinfo = maps[i].store->tile_stat(maps[i].store, req->xmlname, req->t, item->mx, item->my, req->z);
                                                                                                                 ^
gen_tile.cpp:350:59: error: ‘struct protocol’ has no member named ‘t’
                                        req->xmlname, req->t, req->z, item->mx, item->mx+size-1, item->my, item->my+size-1,
                                                           ^
gen_tile.cpp:354:59: error: ‘struct protocol’ has no member named ‘t’
                                        req->xmlname, req->t, req->z, item->mx, item->mx+size-1, item->my, item->my+size-1);
                                                           ^
gen_tile.cpp:356:59: error: ‘struct protocol’ has no member named ‘t’
                             ret = render(&(maps[i]), req->t, item->mx, item->my, req->z, tiles);
                                                           ^
gen_tile.cpp:362:56: error: ‘struct protocol’ has no member named ‘t’
                                     req->xmlname, req->t, req->z, item->mx, item->mx+size-1, item->my, item->my+size-1, (t2 - t1)/1000.0);
                                                        ^
gen_tile.cpp:387:55: error: ‘struct protocol’ has no member named ‘t’
                                     req->xmlname,req->t, req->z, req->x, req->y);
                                                       ^

